css/admin-monthly-statistic.css
.sum * {
  font-weight: bold;
  color: blue;
  font-size: 20px;
}

.last-month-title, .show-year, .show-month {
  color: red;
  font-weight: bold;
}

.show-year, .show-month {
  font-family: Consolas, "Microsoft YaHei", "微软雅黑", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.card-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.btn-print {
  float: right;
}

.price-area {
  width: 100%;
}

.summary-title {
  color: black;
}

.summary-data {
  font-weight: bold;
  color: red;
  font-size: 1.2rem;
  font-family: Consolas, "Microsoft YaHei", "微软雅黑", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

